--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
-
 {
-    "log": {
-        "loglevel": "warning"
-    },
+  "log": {
+    "access": "/var/log/xray/access5.log",
+    "error": "/var/log/xray/error.log",
+    "loglevel": "info"
+       },
     "inbounds": [
-        {
+      {
             "port": 8080,
             "protocol": "trojan",
             "settings": {
                 "clients": [
                     {
-                        "password":"trojanaku",
-                        "email": "love@example.com"
+                        "password":"trojanaku"
                     }
                 ]
             },
@@ -37,8 +37,7 @@
             "settings": {
                 "clients": [
                     {
-                        "password":"trojanaku",
-                        "email": "love@example.com"
+                        "password":"trojanaku"
                     }
                 ]
             },
@@ -62,50 +61,79 @@
             }
         },
         {
-  "port": 443,
-  "protocol": "vless",
-  "tag":"VLESSTCP",
-  "settings": {
-    "clients": [
-     {
-        "id": "ffb363b1-6db4-4ad7-b749-0689a87af06b",
-        "flow":"xtls-rprx-direct"
-      }
-    ],
-    "decryption": "none",
-    "fallbacks": [
-        {"dest":31296,"xver":1},{"alpn":"h2","dest":31302,"xver":0},{"path":"/v2rayws","dest":31297,"xver":1},{"path":"/v2rayvws","dest":31299,"xver":1}
-    ]
-  },
-  "streamSettings": {
-    "network": "tcp",
-    "security": "xtls",
-    "xtlsSettings": {
-      "minVersion": "1.2",
-      "alpn": [
-        "http/1.1",
-        "h2"
-      ],
-      "certificates": [
+            "port": 443,
+            "protocol": "vless",
+            "settings": {
+                "clients": [
+                    {
+                        "id": "ffb363b1-6db4-4ad7-b749-0689a87af06b",
+                        "flow": "xtls-rprx-direct",
+                        "level": 0,
+                        "email": ""
+                    }
+                ],
+                "decryption": "none",
+                "fallbacks": [
+                    {
+                        "path": "/vlessws",
+                        "dest": 1312,
+                        "xver": 1
+                    },
+                    {
+                        "path": "/trojanws",
+                        "dest": 1313,
+                        "xver": 1
+                    }
+                ]
+            },
+            "streamSettings": {
+                "network": "tcp",
+                "security": "xtls",
+                "xtlsSettings": {
+                    "alpn": [
+                        "http/1.1"
+                    ],
+                    "certificates": [
+                        {
+                            "certificateFile": "/root/xray.crt",
+                            "keyFile": "/root/xray.key"
+                        }
+                    ]
+                }
+            }
+        },
         {
-          "certificateFile": "/root/xray.crt",
-          "keyFile": "/root/xray.key",
-          "ocspStapling": 3600,
-          "usage":"encipherment"
-        }
-      ]
-    }
-  }
-},
-{
-  "port": 31297,
+      "port": 1313,
+      "listen": "127.0.0.1",
+      "protocol": "trojan",
+      "settings": {
+        "clients": [
+          {
+            "password": "trojanaku",
+            "level": 0,
+            "email": ""
+          }
+        ]
+      },
+      "streamSettings": {
+        "network": "ws",
+        "security": "none",
+        "wsSettings":
+            {
+              "acceptProxyProtocol": true,
+              "path": "/trojanws"
+            }
+      }
+    },
+    {
+  "port": 1312,
   "listen": "127.0.0.1",
   "protocol": "vless",
-  "tag":"VLESSWS",
   "settings": {
     "clients": [
       {
-        "id": "ffb363b1-6db4-4ad7-b749-0689a87af06b"
+        "id": "ffb363b1-6db4-4ad7-b749-0689a87af06b",
+        "email": ""
       }
     ],
     "decryption": "none"
@@ -115,77 +143,14 @@
     "security": "none",
     "wsSettings": {
       "acceptProxyProtocol": true,
-      "path": "/v2rayws"
+      "path": "/vlessws"
     }
   }
 }
     ],
-  "outbounds": [
-    {
-      "protocol": "freedom",
-      "settings": {}
-    },
-    {
-      "protocol": "blackhole",
-      "settings": {},
-      "tag": "blocked"
-    }
-  ],
-  "routing": {
-    "rules": [
-      {
-        "type": "field",
-        "ip": [
-          "0.0.0.0/8",
-          "10.0.0.0/8",
-          "100.64.0.0/10",
-          "169.254.0.0/16",
-          "172.16.0.0/12",
-          "192.0.0.0/24",
-          "192.0.2.0/24",
-          "192.168.0.0/16",
-          "198.18.0.0/15",
-          "198.51.100.0/24",
-          "203.0.113.0/24",
-          "::1/128",
-          "fc00::/7",
-          "fe80::/10"
-        ],
-        "outboundTag": "blocked"
-      },
-      {
-        "inboundTag": [
-          "api"
-        ],
-        "outboundTag": "api",
-        "type": "field"
-      },
-      {
-        "type": "field",
-        "outboundTag": "blocked",
-        "protocol": [
-          "bittorrent"
-        ]
-      }
+    "outbounds": [
+        {
+            "protocol": "freedom"
+        }
     ]
-  },
-  "stats": {},
-  "api": {
-    "services": [
-      "StatsService"
-    ],
-    "tag": "api"
-  },
-  "policy": {
-    "levels": {
-      "0": {
-        "statsUserDownlink": true,
-        "statsUserUplink": true
-      }
-    },
-    "system": {
-      "statsInboundUplink": true,
-      "statsInboundDownlink": true
-    }
-  }
 }
